# loy

./: Cargo.toml  Justfile  build.zig  build.zig.zon  rustfmt.toml  sample.pl  sample.plr  uncrustify.cfg
loy-ast/: Cargo.toml
loy-ast/src/: ast.rs  ast_fmt.rs  ast_visitor.rs  lib.rs  result.rs  token.rs
loy-context/: Cargo.toml
loy-context/src/: lib.rs  modules.rs  query.rs
loy-context/src/query/: cache.rs  plumbing.rs  steal.rs
loy-driver/: Cargo.toml
loy-driver/src/: driver.rs  lib.rs
loy-hir/: Cargo.toml
loy-hir/src/: lib.rs
loy-lexer/: Cargo.toml
loy-lexer/src/: lexer.rs  lib.rs  result.rs  tests.rs
loy-macros/: Cargo.toml
loy-macros/src/: lib.rs  query.rs
loy-parser/: Cargo.toml
loy-parser/src/: ast.rs  expr.rs  lib.rs  parser.rs  result.rs
loy-parser/src/expr/: binary.rs  control_flow.rs  mod.rs  postfix.rs  precedence.rs  primary.rs  validation.rs
loy-parser/src/statement/: functions.rs  imports.rs  mod.rs  typedefs.rs  types.rs
loy-query/: Cargo.toml
loy-query/src/: lib.rs
loy-typecheck/: Cargo.toml
loy-typecheck-ast/: Cargo.toml
loy-typecheck-ast/src/: modules.rs
loy-typecheck-ast/src/modules/: declaration.rs  resolved_import.rs  resolved_module.rs
loy-typecheck/src/: lib.rs  module.rs
loy-typecheck/src/module/: declarations.rs  exports.rs
piller-lexer/: Cargo.toml
piller-lexer/src/: cursor.rs  lexer.rs  lib.rs  result.rs  tests.rs  token.rs
piller-parser/: Cargo.toml
piller-parser/src/: ast.rs  expr.rs  lib.rs  parser.rs  result.rs
piller-parser/src/expr/: control_flow.rs  mod.rs  postfix.rs  precedence.rs  primary.rs  validation.rs
piller-parser/src/statement/: functions.rs  imports.rs  mod.rs  typedefs.rs  types.rs
samples/: operators.loy  other.loy  scratch.loy  scratch.plr
src/: codegen.c  codegen.h  defines.c  defines.h  error.c  error.h  lexer.c  lexer.h  main.c  main.rs  parser.c  parser.h  typer.c  typer.h  vector.c  vector.h
src/collections/: hash_map.c  hash_map.h  linked_list.c  linked_list.h  vector.c  vector.h
src/mem/: allocator.h  arena.c  arena.h  generic.c  generic.h
src/string/: string.h  string_builder.c  string_builder.h  string_slice.c  string_slice.h
src/unicode/: ascii.c  ascii.h
tests/: main_test.c  test_runner.c  test_runner.h
tests/collections/: hash_map.c  hash_map.h  linked_list.c  linked_list.h  vector.c  vector.h
