[workspace]
resolver = "2"
members = [
    "loy-lexer",
    "loy-parser",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["wiru <hello@wiru.st>"]
repository = "https://github.com/wllfaria/loy"

[workspace.dependencies]
loy-lexer = { path = "loy-lexer" }
loy-parser = { path = "loy-parser" }
thiserror = "2.0.16"
miette = { version = "7.6.0", features = ["fancy"] }

[package]
name = "scratch"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
loy-lexer.workspace = true
loy-parser.workspace = true
miette.workspace = true