[workspace]
resolver = "2"
members = [
    "loy-lexer",
    "loy-parser",
    "loy-ast",
    "loy-query",
    "loy-driver",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["wiru <hello@wiru.st>"]
repository = "https://github.com/wllfaria/loy"

[workspace.dependencies]
loy-lexer = { path = "loy-lexer" }
loy-parser = { path = "loy-parser" }
loy-ast = { path = "loy-ast" }
loy-query = { path = "loy-query" }
loy-driver = { path = "loy-driver" }

thiserror = "2.0.16"
miette = { version = "7.6.0", features = ["fancy"] }

[package]
name = "scratch"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
loy-lexer.workspace = true
loy-parser.workspace = true
loy-query.workspace = true
loy-driver.workspace = true
miette.workspace = true