[workspace]
resolver = "2"
members = [
    "loy-lexer",
    "loy-parser",
    "loy-ast",
    "loy-driver",
    "loy-typecheck",
    "loy-typecheck-ast",
    "loy-context",
    "loy-macros",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["wiru <hello@wiru.st>"]
repository = "https://github.com/wllfaria/loy"

[workspace.dependencies]
loy-lexer = { path = "loy-lexer" }
loy-parser = { path = "loy-parser" }
loy-ast = { path = "loy-ast" }
loy-driver = { path = "loy-driver" }
loy-context = { path = "loy-context" }
loy-typecheck = { path = "loy-typecheck" }
loy-typecheck-ast = { path = "loy-typecheck-ast" }
loy-macros = { path = "loy-macros" }

thiserror = "2.0.16"
miette = { version = "7.6.0", features = ["fancy"] }
fxhash = "0.2.1"
parking_lot = "0.12.4"

[package]
name = "scratch"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
loy-driver.workspace = true
miette.workspace = true