[package]
name = "loy-driver"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
loy-ast.workspace = true
loy-typecheck-ast.workspace = true
loy-typecheck.workspace = true
loy-context.workspace = true
loy-lexer.workspace = true
loy-parser.workspace = true

fxhash.workspace = true