[package]
name = "loy-parser"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
loy-ast.workspace = true
loy-context.workspace = true
loy-typecheck-ast.workspace = true

thiserror.workspace = true
miette.workspace = true